--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+
+        console.log("Hello world");
+    </script>
 </body>
 </html>
