started the variables section and used alert function

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <script>
+    //alert shows tthe variable content not in the console but when page loads
+        // let hello = 'Hello';
+        // let message = hello;
 
-        console.log("Hello world");
+        // alert(hello);
+        // alert(message);
+
+        
     </script>
 </body>
 </html>
