moved onto varaible naming such as camelcasing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
         // alert(hello);
         // alert(message);
 
-        
+    //cant make two variables with the same name comes back with an error
+    //     let message = "hello"
+
+    //     let message = "world"
+
+    //variable names can only have letters, numbers or $ or _. Multiple words need to be camelcased
+
+        let helloWorld = "hello";
+
+        alert(helloWorld);
     </script>
 </body>
 </html>
