learnt about const and used it to create a variabe with my birthday which wont change

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
 
     //     let message = "world"
 
-    //variable names can only have letters, numbers or $ or _. Multiple words need to be camelcased
+    //variable names can only have letters, numbers or $ or _. Multiple words need to be camelcased. Cannot start with a digit or have a hyphen between two words.
 
-        let helloWorld = "hello";
+        // let helloWorld = "hello";
 
-        alert(helloWorld);
+        // alert(helloWorld);
+
+    // constants cannot be changed and are made with const 
+        // const myBirthday = '02.09.2002';
+
+        // alert(myBirthday);
+        
     </script>
 </body>
 </html>
