Started doing the Javascript tasks to check knowledge

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         // const myBirthday = '02.09.2002';
 
         // alert(myBirthday);
-        
+    
+    //tasks
+            let name = 'John';
+            let admin = name;
+
+            alert(admin);
     </script>
 </body>
 </html>
