Learnt about logical operators and did tasks using logical operators and if statements

--- a/index.html
+++ b/index.html
@@ -78,11 +78,29 @@
                 // console.log(length);
 
             //Extracting string parts in three different ways using slice(), substring() and substr()
-                let text = "Apple, Banana, Kiwi";
-                let part = text.slice(7, 13);
+                // let text = "Apple, Banana, Kiwi";
+                // let part = text.slice(7, 13);
             //slice function prints the position of the string that you select via numbers and you count it like an array starting at 0.
             
+            //logical operaators tasks
+                
+                    // if(age>=14 && age<=90) {
+                    //         console.log("correct age")
+                    // } else {
+                    //     return console.log("incorrect age")
+                    // }
 
+                    // if(age<14 || age>90) {
+                    //     console.log("correct age")
+                    // } else {
+                    //     return console.log("incorrect age")
+                    // }
+
+                    // if(!(age>=14 && age<=90) ) {
+                    //     console.log("correct age") 
+                    // } else {
+                    //     console.log("incorrect age")
+                    // }
     </script>
 </body>
 </html>
