Completed function for fizzbuzz

--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
       //     console.log("incorrect age")
       // }
 
-
       // function add7 (number) {
       //       return number + 7;
       // }
@@ -112,7 +111,6 @@
       // }
 
       // console.log(multiply(9, 5));
-        
 
       // function capatalise(string) {
       //     return string.charAt(0).toUpperCase() + string.slice(1);
@@ -120,15 +118,29 @@
 
       // console.log(capatalise("hello"));
 
-
       // function lastLetter (string) {
       //   return string.slice(-1);
       // }
 
       // console.log(lastLetter("hello"));
 
+      //fizzbuzz function
 
-      
+      let answer = parseInt(
+        prompt("Please enter the number you would like to FizzBuzz")
+      );
+
+      for (let i = 1; i <= answer; i++) {
+        if (i % 3 === 0 && i % 5 === 0) {
+          console.log("FizzBuzz");
+        } else if (i % 3 === 0) {
+          console.log("Fizz");
+        } else if (i % 5 === 0) {
+          console.log("Buzz");
+        } else {
+          console.log(i);
+        }
+      }
     </script>
   </body>
 </html>
