--- a/index.html
+++ b/index.html
@@ -126,21 +126,24 @@
 
       //fizzbuzz function
 
-      let answer = parseInt(
-        prompt("Please enter the number you would like to FizzBuzz")
-      );
+      // let answer = parseInt(
+      //   prompt("Please enter the number you would like to FizzBuzz")
+      // );
 
-      for (let i = 1; i <= answer; i++) {
-        if (i % 3 === 0 && i % 5 === 0) {
-          console.log("FizzBuzz");
-        } else if (i % 3 === 0) {
-          console.log("Fizz");
-        } else if (i % 5 === 0) {
-          console.log("Buzz");
-        } else {
-          console.log(i);
-        }
-      }
+      // for (let i = 1; i <= answer; i++) {
+      //   if (i % 3 === 0 && i % 5 === 0) {
+      //     console.log("FizzBuzz");
+      //   } else if (i % 3 === 0) {
+      //     console.log("Fizz");
+      //   } else if (i % 5 === 0) {
+      //     console.log("Buzz");
+      //   } else {
+      //     console.log(i);
+      //   }
+      // }
+
+
+      
     </script>
   </body>
 </html>
